--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "express": "^4.10.0",
     "lodash": "^2.4.1",
     "node-rest-client": "^1.4.1",
     "twit": "^1.1.18",
